apps/pattern-lab/src/_patterns/04-pages/80-pega-world/pega-world.scss
@import "@bolt/core";

.u-pw-color-yellow {
  color: bolt-color(yellow) !important;
}

.u-pw-opacity-40 {
  opacity: 0.4 !important;
}

.u-pw-nowrap {
  white-space: nowrap !important;
}

.u-pw-full-at-bp-400-only {
  @media screen and (max-width: 400px) {
    width: 100% !important;
  }
}

.u-pw-background-image-contain {
  background-size: contain !important;
  background-repeat: no-repeat !important;
  background-position: center center !important;
}

.u-pw-position-lower-logo {
  // Add padding and relative point.
  &.o-bolt-grid__cell {
    .o-bolt-grid--matrix > & {
      padding-bottom: calc(1.65rem + 120px);
      position: relative;
    }
  }
  .u-pw-position-lower-logo__logo {
    bottom: 3rem;
    position: absolute;
    width: 100%;
    .o-bolt-grid__cell {
      padding-left: 0;
    }
  }
}





.c-pw-portrait {
  @include bolt-margin(0 auto medium auto);
  max-width: 250px;
  max-height: 250px;
  overflow: hidden;
  border-radius: 100em;
}


.c-pw-menu-trigger {
  display: block;
  width: 36px;
  border-top-color: bolt-color(white);
  border-top-style: solid;
  border-top-width: 2px;
  border-bottom-color: bolt-color(white);
  border-bottom-style: solid;
  border-bottom-width: 2px;
  cursor: pointer;

  &:before {
    @include bolt-margin(8px 0);
    display: block;
    width: 100%;
    height: 2px;
    content: '';
    background-color: bolt-color(white);
  }

  @media screen and (min-width: 900px) {
    display: none;
  }
}

.c-pw-mobile-menu {
  transition: top 200ms cubic-bezier(0.45,1.8,0.5,0.75);

  &:not(:target) {
    @include bolt-visuallyhidden;
    top: -2rem;
  }

  &:target {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(bolt-color(indigo, dark), 0.95);
    background: linear-gradient(180deg, bolt-color(indigo, xdark), rgba(bolt-color(indigo, dark), 0.9));
    z-index: 99999;
  }
}

.c-pw-mobile-menu-list {
  @include bolt-margin(0 auto);
  @include bolt-padding(0);
  display: block;
  width: 80%;
  text-align: center;
  list-style: none;
}

.c-pw-mobile-menu-list__item {
  &:not(:first-child) {
    @include bolt-margin(large 0);
  }

  &:first-child {
    @include bolt-margin(0);
    @include bolt-padding(medium);

    position: absolute;
    top: 0;
    right: 0;

    .c-pw-mobile-menu-link {
      display: block;
      position: relative;
      width: 36px;
      height: 36px;

      &:before, &:after {
        position: absolute;
        top: 50%;
        left: 0;
        height: 2px;
        width: 100%;
        margin-top: -1px;
        content: '';
        background-color: bolt-color(white);
      }

      &:before {
        transform: rotate(45deg);
      }

      &:after {
        transform: rotate(-45deg);
      }
    }
  }
}

.c-pw-mobile-menu-link {
  @include bolt-font-size(xlarge);
}


.c-pw-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.c-pw-menu-logo {
  display: flex;
  align-items: center;
}

.c-pw-logo-pega {
  width: 110px;
  height: auto;

  @media screen and (min-width: 600px) {
    width: 140px;
  }
}

.c-pw-logo-pw2018 {
  width: 90px;
  height: auto;

  @media screen and (min-width: 600px) {
    width: 120px;
  }
}

.c-pw-menu-list {
  @include bolt-margin(0);
  @include bolt-padding(0);
  display: none;
  text-align: center;
  list-style: none;
  white-space: nowrap;

  @media screen and (min-width: 900px) {
    display: block;
  }
}

.c-pw-menu-list__item {
  display: inline;

  & + #{&} {
    @include bolt-margin-left(large);
  }
}

.c-pw-menu-link,
.c-pw-mobile-menu-link {
  color: bolt-color(white);

  &:hover {
    text-decoration: underline;
  }
}


.c-pw-blocks {
  @include bolt-margin(0);
  @include bolt-padding(0);
  display: flex;
  flex-wrap: nowrap;
  list-style: none;
}

.c-pw-blocks__item {
  @include bolt-margin(0);
  @include bolt-padding(large);
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;

  & + #{&} {
    border-left-width: $bolt-border-width;
    border-left-style: $bolt-border-style;
    border-left-color: var(--bolt-theme-card-border, var(--bolt-theme-border, inherit));
  }
}


.c-pw-svg-icon {
  width: 1.25em;
  height: auto;
  fill: bolt-color(white);
}



$bolt-pw-stat-slideshow-shadow-level: 'level-50';
$bolt-pw-stat-slideshow-shadow-color: bolt-color(indigo, xdark);

.c-pw-stat-slideshow {
  @include bolt-margin(0);
  @include bolt-padding(0);
  @include bolt-shadow($key: $bolt-pw-stat-slideshow-shadow-level, $base-color: $bolt-pw-stat-slideshow-shadow-color);
  display: block;
  position: relative;
  overflow: hidden;
  border-radius: 3px;
  background-color: rgba(bolt-color(white), 0.05);

  @include respond-to(medium) {
    display: flex;
    flex-wrap: nowrap;
  }
}

.c-pw-stat-slideshow-media {
  position: relative;
  margin-right: bolt-spacing(large) * -2;
  margin-left: bolt-spacing(large) * -2;
  padding-bottom: 9 / 16 * 100%;
  overflow: hidden;
  border-width: 0 2rem 2rem 2rem;
  border-style: solid;
  border-color: bolt-color(teal);
  border-radius: 0 0 50% 50%;

  @include respond-to(medium) {
    flex-shrink: 0;
    width: 45%;
    min-width: 280px;
    margin-top: bolt-v-spacing(large) * -2;
    margin-right: 0;
    margin-bottom: bolt-v-spacing(large) * -2;
    margin-left: 0;
    padding-bottom: calc(85% - #{bolt-v-spacing(large) * 4} - 4rem);
    border-width: 2rem 2rem 2rem 0;
    border-radius: 0 50% 50% 0;
  }
}

.c-pw-stat-slideshow-media__video {
  position: absolute;
  top: 0;
  left: 50%;
  width: auto;
  height: 100%;
  transform: translateX(-50%);

  @include respond-to(medium) {
    padding-top: calc(#{bolt-v-spacing(large)} + 1rem);
    padding-bottom: calc(#{bolt-v-spacing(large)} + 1rem);
  }
}

.c-pw-stat-slideshow-media__embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  > * {
    position: absolute !important;
    top: 50% !important;
    left: 50% !important;
    width: 100%;
    height: 100%;
    transform: translate(-50%, -50%) !important;
  }

  @include respond-to(medium) {
    height: calc(100% - #{bolt-v-spacing(large)*2} - 2rem);
    margin-top: calc(#{bolt-v-spacing(large)*2} - 2rem);
    margin-bottom: calc(#{bolt-v-spacing(large)*2} - 2rem);

    > * {
      width: 333% !important;
      height: 100% !important;
    }
  }
}

.c-pw-stat-slideshow-content {
  @include bolt-padding(medium medium large medium);
  display: block;

  @include respond-to(medium) {
    @include bolt-padding(medium);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-width: calc(100% - 280px - 9rem);
  }

  @include respond-to(large) {
    @include bolt-padding(large medium large large);
  }

  @include respond-to(xlarge) {
    @include bolt-padding(xlarge medium xlarge large);
  }
}

.c-pw-stat-slideshow-content__scroll {
  display: block;
  width: 100%;
  overflow-x: hidden;
}




.c-pw-stat-list {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style: none;
  transform: translateX(100%);
  animation: pw-slide 25s infinite ease;
}

.c-pw-stat-list__item {
  display: block;
  flex-shrink: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  opacity: 0;
  animation: pw-fade 5s infinite ease;

  &:nth-child(2) {
    animation-delay: 5s;
  }

  &:nth-child(3) {
    animation-delay: 10s;
  }

  &:nth-child(4) {
    animation-delay: 15s;
  }

  &:nth-child(5) {
    animation-delay: 20s;
  }
}

@keyframes pw-slide {
  0% {
    transform: translateX(0);
  }
  19% {
    transform: translateX(0);
  }
  20% {
    transform: translateX(-100%);
  }
  39% {
    transform: translateX(-100%);
  }
  40% {
    transform: translateX(-200%);
  }
  59% {
    transform: translateX(-200%);
  }
  60% {
    transform: translateX(-300%);
  }
  79% {
    transform: translateX(-300%);
  }
  80% {
    transform: translateX(-400%);
  }
  99% {
    transform: translateX(-400%);
  }
  100% {
    transform: translateX(-500%);
  }
}

@keyframes pw-fade {
  5% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  75% {
    opacity: 1;
  }
  95% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

